--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">About</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="#">Contact</a>
+            <a class="cta" href="#"><button>Contact</button></a>
         </header>
     </body>
 </html>
