Added H1 tag and a CTA button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
         <header>
-            <a class="logo" href="/"><img src="" alt="logo"></a>
+            <a class="logo" href="/"><h1>SH3LL</h1></a>
             <nav>
                 <ul class="nav__links">
                     <li><a href="#">Services</a></li>
@@ -20,5 +21,17 @@
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
+        <section class="home" id="home">
+            <div class="home-content">
+                <h1>Hi , I'm <span>Sanskar</span></h1>
+                <div class="text-animate">
+                    <h3>Frontend Developer</h3>
+                    
+                </div>
+                
+                <p></p>
+                 <div class="btn-box">
+                    <a href="https://discord.com/users/707062799704260699" class="btn">Let's Talk<i class='bx bxl-discord-alt' ></i></a>
+                 </div>
     </body>
 </html>
