Added intro paragraph

--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Navbar</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    </head>
-    <body>
-        <header>
-            <a class="logo" href="/"><h1>SH3LL</h1></a>
-            <nav>
-                <ul class="nav__links">
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-            <a class="cta" href="#"><button>Contact</button></a>
-        </header>
-        <section class="home" id="home">
-            <div class="home-content">
-                <h1>Hi , I'm <span>Sanskar</span></h1>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Navbar</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <a class="logo" href="/"><h1>SH3LL</h1></a>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#"><button>Contact</button></a>
+    </header>
+    <section class="home" id="home">
+        <div class="home-content">
+            <div class="header-content">
+                <h1>Hi, I'm <span>Sanskar</span></h1>
                 <div class="text-animate">
-                    <h3>Frontend Developer</h3>
-                    
                 </div>
-                
-                <p></p>
-                 <div class="btn-box">
-                    <a href="https://discord.com/users/707062799704260699" class="btn">Let's Talk<i class='bx bxl-discord-alt' ></i></a>
-                 </div>
-    </body>
+                <p>Yo, what's up, peeps? Welcome to Sanskar's kickass online hangout! Prepare yourselves for a wild ride filled with dope beats and mind-blowing tech wizardry. Sanskar, the 17-year-old legend, is here to blow your minds and drop some serious skills. From banging out sick beats to coding like a boss, he's got it all covered. So, get ready to chill, vibe, and witness the awesomeness that is Sanskar. Let's get this party started, fam!</p>
+                <div class="btn-box">
+                    <a href="https://discord.com/users/707062799704260699" class="btn">Let's Talk<i class='bx bxl-discord-alt'></i></a>
+                </div>
+            </div>
+            <div class="image-container">
+                <!-- Add your image tag here -->
+                <img src="path/to/your/image.jpg" alt="Your Image Alt Text">
+            </div>
+        </div>
+    </section>
+</body>
 </html>
