Finished the final css and gave final touches

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>Contact</button></a>
+        <a class="cta" href="https://github.com/sanskarOH"><button>GITHUB</button></a>
     </header>
     <section class="home" id="home">
         <div class="home-content">
@@ -28,14 +28,15 @@
                 <h1>Hi, I'm <span>Sanskar</span></h1>
                 <div class="text-animate">
                 </div>
-                <p>Yo, what's up, peeps? Welcome to Sanskar's kickass online hangout! Prepare yourselves for a wild ride filled with dope beats and mind-blowing tech wizardry. Sanskar, the 17-year-old legend, is here to blow your minds and drop some serious skills. From banging out sick beats to coding like a boss, he's got it all covered. So, get ready to chill, vibe, and witness the awesomeness that is Sanskar. Let's get this party started, fam!</p>
+                <p>Yo, what's up, peeps? Welcome to Sanskar's(often called as SH3ll) kickass online hangout! Prepare yourselves for a wild ride filled with dope beats and mind-blowing tech wizardry. Sanskar, the 17-year-old legend, is here to blow your minds and drop some serious skills. From banging out sick beats to coding like a boss, he's got it all covered. So, get ready to chill, vibe, and witness the awesomeness that is Sanskar. Let's get this party started, fam!</p>
+                <br>
                 <div class="btn-box">
-                    <a href="https://discord.com/users/707062799704260699" class="btn">Let's Talk<i class='bx bxl-discord-alt'></i></a>
+                    <a href="https://discord.com/users/707062799704260699" class="btn">Discord!!</a>
                 </div>
             </div>
             <div class="image-container">
                 <!-- Add your image tag here -->
-                <img src="path/to/your/image.jpg" alt="Your Image Alt Text">
+                <img src="images/pfp.jpg" alt="Your Image Alt Text">
             </div>
         </div>
     </section>
