--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Navbar</title>
+    <title>SH3LL</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap">
@@ -28,7 +28,7 @@
                 <h1>Hi, I'm <span>Sanskar</span></h1>
                 <div class="text-animate">
                 </div>
-                <p>Yo, what's up, peeps? Welcome to Sanskar's(often called as SH3ll) kickass online hangout! Prepare yourselves for a wild ride filled with dope beats and mind-blowing tech wizardry. Sanskar, the 17-year-old legend, is here to blow your minds and drop some serious skills. From banging out sick beats to coding like a boss, he's got it all covered. So, get ready to chill, vibe, and witness the awesomeness that is Sanskar. Let's get this party started, fam!</p>
+                <p>Yo, what's up, peeps? Welcome to Sanskar's(often called as SH3LL) kickass online hangout! Prepare yourselves for a wild ride filled with dope beats and mind-blowing tech wizardry. Sanskar, the 17-year-old legend, is here to blow your minds and drop some serious skills. From banging out sick beats to coding like a boss, he's got it all covered. So, get ready to chill, vibe, and witness the awesomeness that is Sanskar. Let's get this party started, fam!</p>
                 <br>
                 <div class="btn-box">
                     <a href="https://discord.com/users/707062799704260699" class="btn">Discord!!</a>
